# rmnc

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  render_plot.rs
ui/: app-window.slint  main.slint  waveform-image.slint
